# RNA-e-Deep-Learning---CESAR-School-2024.01

./: .gitignore  README.md  hello.py  pyproject.toml
Atividade 1.1/: test.ipynb
Atividades/1 - Intro/: Perfils_Clustering.ipynb
Atividades/2 - Linear Regretion/: 2.1-RegressaoLinearDemo.ipynb  2.2-LinearRegressionIrisNumPy.ipynb  2.3-LinearRegressionIris-Tensor.ipynb  2.4-PyTorch_Variaveis_Gradientes.ipynb  2.5-LinearRegressionIrisPyTorch.ipynb  2.6-LinearRegressionIrisOptimizer.ipynb
Atividades/3 - Logistic Regretion/: 3.1-LogisticRegressionIris.ipynb  3.2-LogisticRegressionMNIST.ipynb  3.3-datasets-e-dataloaders.ipynb  3.4-LogisticRegressionMNIST-SGD.ipynb  3.5-LogisticRegressionMNIST-Iterativo.ipynb
Atividades/4 - Redes Neurais/: 4-EXTRA-autoencoder.ipynb  4.1-Activations_pytorch.ipynb  4.2-Iris_dataset_2_ou_mais_camadas_fronteira_dinamica.ipynb  4.3-underfitting_overfitting_regularization.ipynb  4.4-RegressaoLinearOtimizadores.ipynb  4.5-optimizer.ipynb  4.6-MNIST_neuralnet.ipynb
Executados/2 - Linear Regression/: Cópia_de_2_1_RegressaoLinearDemo.ipynb  Cópia_de_2_3_1_LinearRegressionIris_Tensor.ipynb  Cópia_de_2_4_PyTorch_Variaveis_Gradientes.ipynb  Cópia_de_2_5_LinearRegressionIrisPyTorch.ipynb  Cópia_de_2_6_LinearRegressionIrisOptimizer.ipynb
Executados/3 - Regressão Logística/: Cópia_de_3_1_LogisticRegressionIris.ipynb  Cópia_de_3_2_LogisticRegressionMNIST.ipynb  Cópia_de_3_3_datasets_e_dataloaders.ipynb  Cópia_de_3_4_LogisticRegressionMNIST_SGD.ipynb  Cópia_de_3_5_LogisticRegressionMNIST_Iterativo.ipynb
Executados/4 - Redes Neurais/: 4_6_CIFAR100_neuralnet.ipynb  4_6_CIFAR10_neuralnet.ipynb  4_6_Cats&Dogs_neuralnet.ipynb  4_6_KMNIST_neuralnet.ipynb  (+8 more)
Trabalho Final/: Cópia_de_Projeto_Final_Redes_Neurais.ipynb  Projeto_Final_Redes_Neurais.ipynb  TF-RN-DataFruitDatasets.ipynb  code_gen.ipynb
