[project]
name = "rna-deeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "jinja2>=3.1.4",
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "kagglehub>=0.3.4",
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "torchviz",
    "jupyter-nbextensions-configurator>=0.6.4",
    "ipywidgets>=8.1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
torchviz = { git = "https://github.com/szagoruyko/pytorchviz" }
